# pi-connect-speaker

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml
config/: default_config.toml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  OPERATIONS.md  TROUBLESHOOTING.md
scripts/: doctor.sh  install.sh  spotpi-event  uninstall.sh
src/pi_connect_speaker/: __init__.py  __main__.py  cli.py  config.py  defaults.py  diagnostics.py  http_server.py  librespot.py  profiles.py  system.py
src/pi_connect_speaker/static/: index.html
src/pi_connect_speaker/static/assets/: app.css  app.js
src/spotpi/: http_server.py  librespot.py
src/spotpi/static/: index.html
src/spotpi/static/assets/: app.css  app.js
sudoers/: pi-connect-speaker
systemd/: pi-connect-speaker-librespot.service  pi-connect-speaker.service
tests/: test_config.py  test_librespot.py  test_system.py
