[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-connect-speaker"
version = "0.1.0"
description = "A stable Raspberry Pi Spotify Connect speaker with a local settings UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pi Connect Speaker contributors" }]
keywords = ["raspberry-pi", "spotify-connect", "librespot", "alsa", "audio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = []

[project.scripts]
pi-connect-speaker = "pi_connect_speaker.http_server:main"
pi-connect-speaker-librespot = "pi_connect_speaker.librespot:main"
pi-connect-speaker-librespot-preview = "pi_connect_speaker.librespot:preview"
pi-connect-speaker-cli = "pi_connect_speaker.cli:main"
pi-connect-speaker-doctor = "pi_connect_speaker.cli:doctor_main"
pi-connect-speaker-init-config = "pi_connect_speaker.cli:init_config_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pi_connect_speaker = ["static/*.html", "static/assets/*.css", "static/assets/*.js"]
